Fix menu item width on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,6 +19,10 @@
     a.page-link:active,
     a.page-link:focus {
         color: white;
+
+        @media all and (max-width: 992px) {
+            width: 100%;
+        }
     }
 
     a.page-link:hover {
